Fix alignment

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,10 +16,8 @@ p, div {
 }
 
 .inline-menu {
-	display: inline;
-    position: fixed;
-    left: 5px;
-    bottom: 5px;
+    display: inline;
+    margin-bottom: 10px;
 }
 
 .moe {
